// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LastNameField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <label
        for="last_name"
      >
        Nazwisko
      </label>
      <div
        class="sc-dIvqjp iaFmok"
      >
        <input
          class="sc-crzoUp jQLlWv"
          id="testId"
          label="Nazwisko"
          name="last_name"
          placeholder="Nazwisko"
          value="3232"
        />
      </div>
      <span
        class="sc-iqAbSa dmIjtF"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;

exports[`<LastNameField /> matches snapshot 1`] = `
<input
  class="sc-crzoUp kUQhja"
  id="testId"
  label="Nazwisko"
  name="last_name"
  placeholder="Nazwisko"
  value=""
/>
`;

exports[`<LastNameField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <label
        for="last_name"
      >
        LastName*
      </label>
      <div
        class="sc-dIvqjp iaFmok"
      >
        <input
          class="sc-crzoUp jQLlWv"
          id="testId"
          label="LastName"
          name="last_name"
          placeholder="Nazwisko*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-iqAbSa dmIjtF"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<LastNameField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <label
        for="last_name"
      >
        LastName
      </label>
      <div
        class="sc-dIvqjp iaFmok"
      >
        <input
          class="sc-crzoUp kUQhja"
          id="testId"
          label="LastName"
          name="last_name"
          placeholder="Nazwisko"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
